# ising

./: .gitignore  Cargo.toml
documentation/: fitowanie.md
examples/: simulation.rs
results/: result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  results-18-02-2019-21:37.txt  results-2019-02-28T23:09:55.805714000Z.txt  results-21-02-2019-17:27.txt
results/recordings/: chorzow-1-processed.json  chorzow-10-processed.json  chorzow-11-processed.json  chorzow-12-processed.json  chorzow-3-processed.json  chorzow-4-processed.json  chorzow-5-processed.json  chorzow-9-processed.json  nospr-1-processed.json
results/simulation/: results-04.03.2019-20.07.txt  results-06.03.2019-23.38.txt
simulation/: Cargo.toml  lib.py  main.py
simulation/src/: main.rs
src/: calculations.rs  lattice.rs  lib.rs  main.rs  prelude.rs  simulation.rs
