[package]
name = "ising"
version = "0.1.0"
authors = ["micouy <szpontaniczny@gmail.com>"]
edition = "2018"

[dependencies]
ndarray = "^0.12"
rand = "^0.6"
pretty_assertions = "*"
humantime = "^1.2"
pbr = "*"

[lib]
name = "ising_lib"
path = "src/lib.rs"

[[bin]]
name = "ising_bin"
path = "src/main.rs"
